xcordef Sxy(z) and Sxy(w) proofs

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -60,7 +60,7 @@ and $\rvx$ may lead or lag $\rvy$
 ($2\times2\times2=8$).
 Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 \\\indentx$\begin{array}{FMM}
-  \imark & We get eight different results for $\Szxy(z)$ & \xref{prop:RxySzxy}\\
+  \imark & We get four different results for $\Szxy(z)$ & \xref{prop:RxySzxy}\\
   \imark & We get four different results for $\Swxy(\omega)$ & \xref{prop:RxySwxy}\\
   \imark & If $\rvx$ and $\rvy$ are \prope{real-valued}, we get two different results for $\Swxy(\omega)$ & \xref{prop:RxySwxy_real}
 \end{array}$
@@ -69,15 +69,15 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 \begin{proposition}
 \label{prop:RxySzxy}
 %---------------------------------------
-\propbox{\begin{array}{FM   >{\ds}r  c     l *{3}{@{\hspace{0pt}}l}          c         >{\ds}r   c l @{\hspace{0pt}}c@{\hspace{0pt}}l    ll}
+\propbox{\begin{array}{FM   >{\ds}r  c     l *{3}{@{\hspace{0pt}}l}          c         >{\ds}r   c l@{\hspace{0pt}}l@{\hspace{0pt}}l}
     (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast\brp{\frac{1}{z^\ast}}
   \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx     (z)
   \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast\brp{z^\ast}
   \\(4).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
   \\(5).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)
-  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&
-  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&
-  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&
+  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx^\ast\brp{z^\ast}
+  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z)
+  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
 \end{array}}
 \end{proposition}
 \begin{proof}
@@ -111,7 +111,8 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
     \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
-      && \text{by \prefp{thm:opZ}}
+      && \text{by property of the \ope{Z-transform}}
+      && \text{by \xref{thm:opZ}}
 \\
 \intertext{2. If we follow Kay $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy(m)}}$, then\ldots}
     \Szxy(z)
@@ -135,7 +136,6 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&=    \brs{\opZ\fh(m)}\brs{\opZ\Rxx(m)}
     \\&\eqd \boxed{\ZH(z) \Szxx(z)}
       && \text{by definitions of $\ZH(z)$ and $\Szxx(z)$}
-      %&& \text{\xref{def:dtft}}
 \\
 \intertext{3. For y-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy^\ast(m)}}$ \ldots}
     \Szxy(z)
@@ -189,8 +189,9 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&\eqd \brs{\opZ\fh(-m)} \brs{\opZ\Rxx(m)}
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
-    \\&\eqd \boxed{\ZH\brp{\frac{1}{z}} \Szxx(z)}
-      && \text{by \prefp{thm:dtft_conjneg}}
+    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxx(z)}
+      && \text{by property of the \ope{Z-transform}}
+      && \text{by \xref{thm:opZ}}
 \\
 \intertext{5. If we follow Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy(m)}}$, then\ldots}
     \Szxy(z)
@@ -227,7 +228,7 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
       && \text{\xref{thm:pE_linop}}
     \\&=    \opZ\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(-m-k)}
       && \text{by \prope{wide sense stationary} property}
-      %&& \text{\xref{def:wss}}
+      && \text{\xref{def:wss}}
     \\&=    \opZ\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(-m-k)\rvx(0)}
       && \text{by \prope{commutative} property}
     \\&\eqd \opZ                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
@@ -235,11 +236,15 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \FH(-\omega) \Szxx(z)
+    \\&= \opZ\brs{\fh(-m) \convd \Rxx^\ast(m)}
+      && \text{by property of $\Rxx(m)$}
+      && \text{\xref{cor:Rxxm}}
+    \\&= \opZ\brs{\fh(-m)} \brs{\opZ\Rxx^\ast(m)}
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
+    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{z^\ast}}
+      && \text{by property of the \ope{Z-transform}}
+      && \text{by \xref{thm:opZ}}
 \\
 \intertext{7. For Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}}$, then\ldots}
     \Szxy(z)
@@ -259,9 +264,12 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&\eqd \opZ\brs{\fh^\ast(m) \convd \Rxx(m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \FH^\ast(-\omega) \Szxx(z)
+    \\&= \brs{\opZ\fh^\ast(m)} \brs{\opZ\Rxx(m)}
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
+    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxx(z)}
+      && \text{by property of the \ope{Z-transform}}
+      && \text{by \xref{thm:opZ}}
 \\
 \intertext{8. For alt-Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}}$ \ldots}
     \Szxy(z)
@@ -285,11 +293,15 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx^\ast(-m)}
       && \text{by definition of \ope{convolution}}
       && \text{\xref{def:convd}}
-    \\&\eqd \opZ\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \FH(-\omega) \Szxx(z)
+    \\&= \opZ\brs{\fh(-m) \convd \Rxx(m)}
+      && \text{by property of $\Rxx(m)$}
+      && \text{\xref{cor:Rxxm}}
+    \\&= \brs{\opZ\fh(-m)} \brs{\opZ\Rxx(m)}
       && \text{by \thme{convolution theorem}}
       && \text{\xref{thm:conv}}
+    \\&= \ZH\brp{\frac{1}{z}} \Szxx(z)
+      && \text{by property of the \ope{Z-transform}}
+      && \text{by \xref{thm:opZ}}
   \end{align*}
 \end{proof}
 
@@ -367,81 +379,36 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
 \\
 \intertext{6. For alt-Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy(0)}}$ \ldots}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy(0)}
-      && \text{by this definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx(m)\brp{\sum_{k\in\Z} \fh(k) \rvx(0-k)}}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(m)\rvx(-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(0)\rvx(-m-k)}
-      && \text{by \prope{wide sense stationary} property}
-      %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh(k) \pE\brs{\rvx(-m-k)\rvx(0)}
-      && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh(k) \Rxx(-m-k)
-      && \text{by this definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(-m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \FH(-\omega) \Swxx(\omega)
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
+      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
+    \\&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
+    \\&=    \ZH\brp{e^{-i\omega}} \Szxx\brp{e^{-i\omega}}
+    \\&\eqd \boxed{\FH(-\omega) \Swxx\brp(-\omega)}
+      && \text{by definition of \ope{DTFT}}
+      && \text{\xref{def:dtft}}
 \\
 \intertext{7. For Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}}$, then\ldots}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
-      && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(m-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(m-k)
-      && \text{by Bendat-star definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh^\ast(m) \convd \Rxx(m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&\eqd \FH^\ast(-\omega) \Swxx(\omega)
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
+      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
+    \\&=    \brlr{\ZH^\ast\brp{z^\ast} \Szxx(z)}_{z=e^{i\omega}}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
+    \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
+    \\&\eqd \boxed{\FH^\ast(-\omega) \Swxx\brp(\omega)}
+      && \text{by definition of \ope{DTFT}}
+      && \text{\xref{def:dtft}}
 \\
 \intertext{8. For alt-Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}}$ \ldots}
     \Swxy(\omega)
-      &\eqd \opDTFT\pE\Rxy(m)
-      && \text{by definition of $\Swxy(\omega)$}
-      && \text{\xref{def:Swxy}}
-    \\&\eqd \opDTFT\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
-      && \text{by this definition of $\Rxy(m)$}
-    \\&=    \opDTFT\pE\brs{\rvx^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}
-      && \text{by \prope{LTI} property}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(m)\rvx^\ast(-k)}
-      && \text{by \prope{linearity} of $\opE$}
-      && \text{\xref{thm:pE_linop}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(0)\rvx^\ast(-m-k)}
-      && \text{by \prope{wide sense stationary} property}
-      %&& \text{\xref{def:wss}}
-    \\&=    \opDTFT\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(-m-k)\rvx^\ast(0)}
-      && \text{by \prope{commutative} property}
-    \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx^\ast(-m-k)
-      && \text{by this definition of $\Rxy(m)$}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx^\ast(-m)}
-      && \text{by definition of \ope{convolution}}
-      && \text{\xref{def:convd}}
-    \\&\eqd \opDTFT\brs{\fh(-m) \convd \Rxx(m)}
-      && \text{by \prefp{cor:Rxxm}}
-    \\&\eqd \FH(-\omega) \Swxx(\omega)
-      && \text{by \thme{convolution theorem}}
-      && \text{\xref{thm:conv}}
+      &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
+    \\&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx(z)}_{z=e^{i\omega}}
+      &&    \text{by $\Szxy(z)$ result}
+      &&    \text{\xref{prop:RxySzxy}}
+    \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
+    \\&\eqd \boxed{\FH(-\omega) \Swxx\brp(\omega)}
+      && \text{by definition of \ope{DTFT}}
+      && \text{\xref{def:dtft}}
   \end{align*}
 \end{proof}
 
