xcordef. Sxy(w). more compact proof

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -231,81 +231,49 @@ Depending on which one of the eight definitions of $\Rxy(m)$ we select:
     \\&=    \boxed{\FH^\ast\brp{\omega} \Swxx\brp{\omega}}
       && \text{because $\Swxx(\omega)$ is \prope{real-valued}}
       && \text{\xref{cor:Swxy_sym}}
-\\
-\intertext{2. If we follow Kay $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy(m)}}$, then\ldots}
-    \Swxy(\omega)
+\end{align*}
+\begin{align*}
+    2.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
-    \\&=    \boxed{\FH\brp{\omega} \Swxx\brp{\omega}}
+     &&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
+     &&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
+     &&\eqd \boxed{\FH\brp{\omega} \Swxx\brp{\omega}}
 \\
-\intertext{3. For y-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy^\ast(m)}}$ \ldots}
-    \Swxy(\omega)
+    3.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH^\ast\brp{z^\ast} \Swxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx^\ast\brp{e^{-i\omega}}
-    \\&\eqd \boxed{\FH^\ast\brp{-\omega} \Swxx^\ast\brp{-\omega}}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
+     &&=    \brlr{\ZH^\ast\brp{z^\ast} \Swxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
+     &&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx^\ast\brp{e^{-i\omega}}
+     &&\eqd \boxed{\FH^\ast\brp{-\omega} \Swxx^\ast\brp{-\omega}}
 \\
-\intertext{4. item For x-star-m $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy(0)}}$ \ldots}
-    \Swxy(\omega)
+    4.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
-    \\&\eqd \boxed{\FH(-\omega) \Swxx\brp(\omega)}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
+     &&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx(z)}_{z=e^{i\omega}}
+     &&=    \ZH\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
+     &&\eqd \boxed{\FH(-\omega) \Swxx\brp(\omega)}
 \\
-\intertext{5. If we follow Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(0)\rvy(m)}}$, then\ldots}
-    \Swxy(\omega)
+    5.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
-    \\&\eqd \boxed{\FH(\omega) \Swxx\brp(\omega)}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
+     &&=    \brlr{\ZH(z) \Szxx(z)}_{z=e^{i\omega}}
+     &&=    \ZH\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
+     &&\eqd \boxed{\FH(\omega) \Swxx\brp(\omega)}
 \\
-\intertext{6. For alt-Bendat $\brp{\Rxy(m)\eqd\pE\brs{\rvx(m)\rvy(0)}}$ \ldots}
-    \Swxy(\omega)
+    6.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH\brp{e^{-i\omega}} \Szxx\brp{e^{-i\omega}}
-    \\&\eqd \boxed{\FH(-\omega) \Swxx\brp(-\omega)}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
+     &&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{z^\ast}}_{z=e^{i\omega}}
+     &&=    \ZH\brp{e^{-i\omega}} \Szxx\brp{e^{-i\omega}}
+     &&\eqd \boxed{\FH(-\omega) \Swxx\brp(-\omega)}
 \\
-\intertext{7. For Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(0)\rvy^\ast(m)}}$, then\ldots}
-    \Swxy(\omega)
+    7.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH^\ast\brp{z^\ast} \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
-    \\&\eqd \boxed{\FH^\ast(-\omega) \Swxx\brp(\omega)}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
+     &&=    \brlr{\ZH^\ast\brp{z^\ast} \Szxx(z)}_{z=e^{i\omega}}
+     &&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
+     &&\eqd \boxed{\FH^\ast(-\omega) \Swxx\brp(\omega)}
 \\
-\intertext{8. For alt-Bendat-star $\brp{\Rxy(m)\eqd\pE\brs{\rvx^\ast(m)\rvy^\ast(0)}}$ \ldots}
-    \Swxy(\omega)
+    8.\quad\Swxy(\omega)
       &\eqd \brlr{\Szxy(z)}_{z=e^{i\omega}}
-    \\&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx(z)}_{z=e^{i\omega}}
-      &&    \text{by $\Szxy(z)$ result}
-      &&    \text{\xref{prop:RxySzxy}}
-    \\&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
-    \\&\eqd \boxed{\FH(-\omega) \Swxx\brp(\omega)}
-      && \text{by definition of \ope{DTFT}}
-      && \text{\xref{def:dtft}}
+     &&=    \brlr{\ZH\brp{\frac{1}{z}} \Szxx(z)}_{z=e^{i\omega}}
+     &&=    \ZH^\ast\brp{e^{-i\omega}} \Szxx\brp{e^{i\omega}}
+     &&\eqd \boxed{\FH(-\omega) \Swxx\brp(\omega)}
   \end{align*}
 \end{proof}
 
