xcordef. Sytheta(z) work in progress

--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -125,15 +125,15 @@ Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
 \label{prop:conv_knk}
 %--------------------------------------
 Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
+Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR}.
 \propbox{
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-      (A).&\fx[n]\convd\fy[n] &=&   \sum_{k\in\Z} \fx[k]\fy[n-k] & and
-    \\(B).&\fx[n],\fy[n]      &\in& \spllR                       &
-    \\    &                    \mc{4}{l}{\spllR \quad\text{(\prope{absolutely summable} \xrefnp{def:spllR})}}
+      (A).&\fx(n) &\in& \spllR & and
+    \\(B).&\fy(n) &\in& \spllR
   \end{array}}
   \implies
   \brb{\begin{array}{>{\ds}rc>{\ds}l}
-     \sum_{k\in\Z} \fx[k]\fy[n+k] &=& \fx[-n]\convd\fy[n]
+     \sum_{k\in\Z} \fx[k]\fy[n+k] &=& \fx[-n]\convd\fy(n)
   \end{array}}
   }
 \end{proposition}
