--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1727,6 +1727,9 @@
 \newcommand{\Rrr} {\Rxx[rr]}
 \newcommand{\Rrx} {\Rxx[rx]}
 \newcommand{\Rxy} {\Rxx[xy]}
+\newcommand{\Ryt} {\Rxx[y{\theta}]}
+\newcommand{\Rty} {\Rxx[{\theta}y]}
+\newcommand{\Rxt} {\Rxx[x{\theta}]}
 \newcommand{\Rxv} {\Rxx[xv]}
 \newcommand{\Rvy} {\Rxx[vy]}
 \newcommand{\Ryv} {\Rxx[yv]}
@@ -1790,6 +1793,9 @@
 \newcommand{\Szuq}   {\Sz{uq}}
 \newcommand{\Szvv}   {\Sz{vv}}
 \newcommand{\Szyy}   {\Sz{yy}}
+\newcommand{\Szyt}   {\Sz{y{\theta}}}
+\newcommand{\Szty}   {\Sz{{\theta}y}}
+\newcommand{\Szxt}   {\Sz{x{\theta}}}
 \newcommand{\Szxy}   {\Sz{xy}}
 \newcommand{\Szyx}   {\Sz{yx}}
 \newcommand{\Szyu}   {\Sz{yu}}
