--- a/2019xcor/dsp.tex
+++ b/2019xcor/dsp.tex
@@ -125,35 +125,35 @@ Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
 \label{prop:conv_knk}
 %--------------------------------------
 Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
+Let $\spllR$ be the set of \prope{absolutely summable} sequences \xref{def:spllR}.
 \propbox{
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-      (A).&\fx[n]\convd\fy[n] &=&   \sum_{k\in\Z} \fx[k]\fy[n-k] & and
-    \\(B).&\fx[n],\fy[n]      &\in& \spllR                       &
-    \\    &                    \mc{4}{l}{\spllR \quad\text{(\prope{absolutely summable} \xrefnp{def:spllR})}}
+      (A).&\fx(n) &\in& \spllR & and
+    \\(B).&\fy(n) &\in& \spllR
   \end{array}}
   \implies
   \brb{\begin{array}{>{\ds}rc>{\ds}l}
-     \sum_{k\in\Z} \fx[k]\fy[n+k] &=& \fx[-n]\convd\fy[n]
+     \sum_{k\in\Z} \fx[k]\fy[n+k] &=& \fx(-n)\convd\fy(n)
   \end{array}}
   }
 \end{proposition}
 \begin{proof}
 \begin{align*}
   \sum_{k\in\Z} \fx[k]\fy[n+k] 
-    &= \sum_{-p\in\Z} \fx[-p]\fy[n-p] 
+    &= \sum_{-p\in\Z} \fx[-p]\fy(n-p) 
     && \text{where $p\eqd -k$}
     && \text{$\implies$ $k=-p$}
-  \\&= \sum_{p\in\Z} \fx[-p]\fy[n-p] 
+  \\&= \sum_{p\in\Z} \fx[-p]\fy(n-p) 
     && \text{by \prope{absolutely summable} hypothesis}
     && \text{\xref{def:spllR}}
-  \\&= \sum_{p\in\Z} \fx'[p]\fy[n-p] 
-    && \text{where $\fx'[n] \eqd\fx[-n]$}
-    && \text{$\implies$ $\fx[-n]=\fx'[n]$}
-  \\&\eqd \fx'[n]\convd\fy[n]
+  \\&= \sum_{p\in\Z} \fx'(p)\fy(n-p) 
+    && \text{where $\fx'(n) \eqd\fx(-n)$}
+    && \text{$\implies$ $\fx(-n)=\fx'(n)$}
+  \\&\eqd \fx'(n)\convd\fy(n)
     && \text{by definition of \ope{convolution} $\convd$}
     && \text{\xref{def:convd}}
-  \\&\eqd \fx[-n]\convd\fy[n]
-    && \text{by definition of $\fx'[n]$}
+  \\&\eqd \fx(-n)\convd\fy(n)
+    && \text{by definition of $\fx'(n)$}
 \end{align*}
 \end{proof}
 
@@ -180,37 +180,37 @@ Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
 \begin{theorem}
 \label{thm:opZ}
 %--------------------------------------
-Let $X(z)\eqd\opZ\fx[n]$ be the \ope{z-transform} of $\fx[n]$.
+Let $X(z)\eqd\opZ\fx(n)$ be the \ope{z-transform} of $\fx(n)$.
 \thmbox{
   \brb{\begin{array}{rcl}
-    \Zx(z) &\eqd& \opZ\seqn{\fx[n]}
+    \Zx(z) &\eqd& \opZ\seqn{\fx(n)}
   \end{array}}
   \quad\implies\quad
   \brb{\begin{array}{F>{\ds}lc>{\ds}lCD}
-      (1).&\opZ\seqn{\alpha\fx[n]} &=& \alpha\Zx(z)                    & \forall\seqn{x_n}\in\spllR & and
+      (1).&\opZ\seqn{\alpha\fx(n)} &=& \alpha\Zx(z)                    & \forall\seqn{x_n}\in\spllR & and
     \\(2).&\opZ\seqn{\fx[n-k]}     &=& z^{-k}\Zx(z)                    & \forall\seqn{x_n}\in\spllR & and
-    \\(3).&\opZ\seqn{\fx[-n]}      &=& \Zx\brp{\frac{1}{z}}            & \forall\seqn{x_n}\in\spllR & and
-    \\(4).&\opZ\seqn{\fx^\ast[n]}  &=& \Zx^\ast\brp{z^\ast}            & \forall\seqn{x_n}\in\spllR & and
-    \\(5).&\opZ\seqn{\fx^\ast[-n]} &=& \Zx^\ast\brp{\frac{1}{z^\ast}}  & \forall\seqn{x_n}\in\spllR &
+    \\(3).&\opZ\seqn{\fx(-n)}      &=& \Zx\brp{\frac{1}{z}}            & \forall\seqn{x_n}\in\spllR & and
+    \\(4).&\opZ\seqn{\fx^\ast(n)}  &=& \Zx^\ast\brp{z^\ast}            & \forall\seqn{x_n}\in\spllR & and
+    \\(5).&\opZ\seqn{\fx^\ast(-n)} &=& \Zx^\ast\brp{\frac{1}{z^\ast}}  & \forall\seqn{x_n}\in\spllR &
   \end{array}}
   }
 \end{theorem}
 \begin{proof}
 \begin{align*}
   \alpha\Z\Zx(z)
-    &\eqd \alpha \opZ \seqn{\fx[n]}                && \text{by definition of $\Zx(z)$}
-  \\&\eqd \alpha \sum_{n\in\Z} \fx[n] z^{-n}       && \text{by definition of $\opZ$ operator}
-  \\&\eqd \sum_{n\in\Z} \brp{\alpha\fx[n]} z^{-n}  && \text{by \prope{distributive} property}
-  \\&\eqd \opZ\seqn{\alpha\fx[n]}                  && \text{by definition of $\opZ$ operator}
+    &\eqd \alpha \opZ \seqn{\fx(n)}                && \text{by definition of $\Zx(z)$}
+  \\&\eqd \alpha \sum_{n\in\Z} \fx(n) z^{-n}       && \text{by definition of $\opZ$ operator}
+  \\&\eqd \sum_{n\in\Z} \brp{\alpha\fx(n)} z^{-n}  && \text{by \prope{distributive} property}
+  \\&\eqd \opZ\seqn{\alpha\fx(n)}                  && \text{by definition of $\opZ$ operator}
   \\
   z^{-k}\Zx(z) 
-    &= z^{-k} \opZ\seqn{\fx[n]}
+    &= z^{-k} \opZ\seqn{\fx(n)}
     && \text{by definition of $\Zx(z)$}
     && \text{(left hypothesis)}
-  \\&\eqd z^{-k}\sum_{n=-\infty}^{n=+\infty} \fx[n] z^{-n}
+  \\&\eqd z^{-k}\sum_{n=-\infty}^{n=+\infty} \fx(n) z^{-n}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
-  \\&=          \sum_{n=-\infty}^{n=+\infty} \fx[n] z^{-n-k}
+  \\&=          \sum_{n=-\infty}^{n=+\infty} \fx(n) z^{-n-k}
   \\&=          \sum_{m-k=-\infty}^{m-k=+\infty} \fx[m-k] z^{-m}
     && \text{where $m\eqd n+k$}
     && \text{$\implies$ $n=m-k$}
@@ -221,19 +221,19 @@ Let $X(z)\eqd\opZ\fx[n]$ be the \ope{z-transform} of $\fx[n]$.
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\
-  \opZ\seqn{\fx^\ast[n]}  
-    &\eqd \sum_{n\in\Z}\fx^\ast[n] z^{-n}
+  \opZ\seqn{\fx^\ast(n)}  
+    &\eqd \sum_{n\in\Z}\fx^\ast(n) z^{-n}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
-  \\&\eqd \brp{\sum_{n\in\Z}\fx[n] (z^\ast)^{-n}}^\ast
+  \\&\eqd \brp{\sum_{n\in\Z}\fx(n) (z^\ast)^{-n}}^\ast
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\&\eqd \Zx^\ast(z^\ast)
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\
-  \opZ\seqn{\fx[-n]}  
-    &\eqd \sum_{n\in\Z}\fx[-n] z^{-n}
+  \opZ\seqn{\fx(-n)}  
+    &\eqd \sum_{n\in\Z}\fx(-n) z^{-n}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\&= \sum_{-m\in\Z}\fx[m] z^{m}
@@ -249,8 +249,8 @@ Let $X(z)\eqd\opZ\fx[n]$ be the \ope{z-transform} of $\fx[n]$.
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\
-  \opZ\seqn{\fx^\ast[-n]}  
-    &\eqd \sum_{n\in\Z}\fx^\ast[-n] z^{-n}
+  \opZ\seqn{\fx^\ast(-n)}  
+    &\eqd \sum_{n\in\Z}\fx^\ast(-n) z^{-n}
     && \text{by definition of $\opZ$}
     && \text{\xref{def:opZ}}
   \\&= \sum_{-m\in\Z}\fx^\ast[m] z^{m}
@@ -314,7 +314,7 @@ Let $\convd$ be the convolution operator \xref{def:dsp_conv}.
 %\begin{align*}
 % \Zy(z) &=  b_0X(z) + b_1z^{-1}X(z)  + b_2z^{-2}X(z) - a_1 z^{-1}Y(z) + a_2z^{-2}Y(z)
 %  \\\\
-%  \fy[n] &= b_0\fx[n] + b_1\fx[n-1] + b_2\fx[n-2] - a_1\fy[n-1] - a_2\fy[n-2]
+%  \fy(n) &= b_0\fx(n) + b_1\fx[n-1] + b_2\fx[n-2] - a_1\fy[n-1] - a_2\fy[n-2]
 %\end{align*}
 %
 %%---------------------------------------
