xcordef. All 8 Sxy(z) and Syy(z) proofs in Sytheta(z) format

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1730,6 +1730,7 @@
 \newcommand{\Ryt} {\Rxx[y{\theta}]}
 \newcommand{\Rty} {\Rxx[{\theta}y]}
 \newcommand{\Rxt} {\Rxx[x{\theta}]}
+\newcommand{\Rtx} {\Rxx[{\theta}x]}
 \newcommand{\Rxv} {\Rxx[xv]}
 \newcommand{\Rvy} {\Rxx[vy]}
 \newcommand{\Ryv} {\Rxx[yv]}
@@ -1796,6 +1797,7 @@
 \newcommand{\Szyt}   {\Sz{y{\theta}}}
 \newcommand{\Szty}   {\Sz{{\theta}y}}
 \newcommand{\Szxt}   {\Sz{x{\theta}}}
+\newcommand{\Sztx}   {\Sz{{\theta}x}}
 \newcommand{\Szxy}   {\Sz{xy}}
 \newcommand{\Szyx}   {\Sz{yx}}
 \newcommand{\Szyu}   {\Sz{yu}}
