--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -109,7 +109,7 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
 $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0pt}}l         D    l         c  l       *{3}{@{\hspace{0pt}}l}                                 c  l       *{5}{@{\hspace{0pt}}l}}
     (1) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy     &(z)                    &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx     &(z)
   \\(2) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(3) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast\brp{z^\ast} &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy     &\brp{\frac{1}{z}}      &=& \ZH^\ast&\brp{z^\ast}      &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+  \\(3) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx\brp{z}           &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH^\ast&\brp{z^\ast}      &\ZH\brp{\frac{1}{z}}            &\Szxx^\ast&\brp{\frac{1}{z}}
   \\(4) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
   \\(5) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
   \\(6) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
@@ -274,22 +274,22 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
        \mathrlap{\qquad=    \opZ\pE\brp{\rvt(0)\brs{\sum_{k\in\Z} \fh(k)\rvx(m-k)}^\ast}}
     \\&=    \opZ\pE\brs{\rvt(0) \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(m-k)}
      &&=    \opZ        \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt(0)\rvx^\ast(m-k)}
-     &&\eqd \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rtx^\ast(m-k)
-    \\&\eqd \opZ\brs{\fh^\ast(m) \convd \Rtx^\ast(m)}
-     &&=    \brs{\opZ\fh^\ast(m)} \brs{\opZ\Rtx^\ast(m)}
-     &&= \boxed{\ZH^\ast\brp{z^\ast} \Sztx^\ast\brp{z^\ast}}
+     &&\eqd \opZ        \sum_{k\in\Z} \fh^\ast(k) \Rtx(m-k)
+    \\&\eqd \opZ\brs{\fh^\ast(m) \convd \Rtx(m)}
+     &&=    \brs{\opZ\fh^\ast(m)} \brs{\opZ\Rtx(m)}
+     &&= \boxed{\ZH^\ast\brp{z^\ast} \Sztx\brp{z}}
     \\
     \Szxy(z)
       &\eqd \brlr{\Szty(z)}_{\rvt=\rvx}
-     &&= \brlr{\ZH^\ast\brp{z^\ast} \Sztx^\ast\brp{z^\ast}}_{\rvt=\rvx}
-     &&= \boxed{\ZH^\ast\brp{z^\ast} \Szxx^\ast\brp{z^\ast}}
+     &&= \brlr{\ZH^\ast\brp{z^\ast} \Sztx\brp{z}}_{\rvt=\rvx}
+     &&= \boxed{\ZH^\ast\brp{z^\ast} \Szxx\brp{z}}
     \\
     \Szyy(z)
       &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
-     &&= \brlr{\ZH^\ast\brp{z^\ast} \Sztx^\ast\brp{z^\ast}}_{\rvt=\rvy}
-     &&= \ZH^\ast\brp{z^\ast} \Szyx^\ast\brp{z^\ast}
-    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxy\brp{\frac{1}{z}}}
-     &&= \boxed{\ZH^\ast\brp{z^\ast} \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
+     &&= \brlr{\ZH^\ast\brp{z^\ast} \Sztx\brp{z}}_{\rvt=\rvy}
+     &&= \ZH^\ast\brp{z^\ast} \Szyx\brp{z}
+    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxy^\ast\brp{\frac{1}{z^\ast}}}
+     &&= \boxed{\ZH^\ast\brp{z^\ast} \ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{\frac{1}{z}}}
 \\
     4.\quad\Szty(z)
       &\eqd \opZ\Rxy(m)
@@ -418,16 +418,19 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
 \label{prop:Rxym}
 \label{prop:RxySwxy}
 %---------------------------------------
-\propbox{\begin{array}{FM >{\ds}rc l*{3}{@{\hspace{0pt}}l} c >{\ds}rc l*{2}{@{\hspace{0pt}}l}}
-    (1).&Papoulis:        & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\FH^\ast&( &\omega)\Swxx(\omega)
-  \\(2).&Kay:             & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\FH     &( &\omega)\Swxx(\omega)
-  \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\FH^\ast&(-&\omega)\Swxx(\omega)
-  \\(4).&x-star-m:        & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\FH     &(-&\omega)\Swxx(\omega)
-  \\(5).&Bendat:          & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy     &(m&)] &\implies& \Swxy(\omega) &=&\FH     &( &\omega)\Swxx(\omega)
-  \\(6).&alt-Bendat:      & \Rxy(m) &\eqd& \pE[\rvx     &(m)\rvy     &(0&)] &\implies& \Swxy(\omega) &=&\FH     &(-&\omega)\Swxx(\omega)
-  \\(7).&Bendat-star      & \Rxy(m) &\eqd& \pE[\rvx^\ast&(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\FH^\ast&(-&\omega)\Swxx(\omega)
-  \\(8).&alt-Bendat-star: & \Rxy(m) &\eqd& \pE[\rvx^\ast&(m)\rvy^\ast&(0&)] &\implies& \Swxy(\omega) &=&\FH     &(-&\omega)\Swxx(\omega)
-\end{array}}
+Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
+\\
+$\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0pt}}l         D    l         c  l       *{3}{@{\hspace{0pt}}l}                                 c  l       *{5}{@{\hspace{0pt}}l}}
+    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &( \omega) &=& \mc{4}{l}{\abs{\FH( \omega)}^2}        &\Swxx&( \omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH( \omega)}^2}        &\Swxx&( \omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH(-\omega)}^2}        &\Swxx&( \omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH(-\omega)}^2}        &\Swxx&( \omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH( \omega)}^2}        &\Swxx&( \omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH(-\omega)}^2}        &\Swxx&( \omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH(-\omega)}^2}        &\Swxx&( \omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)      &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& \mc{4}{l}{\abs{\FH(-\omega)}^2}        &\Swxx&( \omega)
+\end{array}$
+% \\(3).&y-star-m:        & \Rxy(m) &\eqd& \pE[\rvx     &(0)\rvy^\ast&(m&)] &\implies& \Swxy(\omega) &=&\FH^\ast&(-&\omega)\Swxx(\omega)
 \end{proposition}
 \begin{proof}
 \begin{align*}
