xcordef. Swxy(w) for real-valued x and y

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1872,7 +1872,7 @@ Let $\estHkp(\omega)$ be the transfer function estimate defined in \prefpp{def:H
   \item lemma $\brp{\pderiv{}{\estH_I}\Swuu}$: \label{ilem:estHk_HI}
     \begin{align*}
       \boxed{0}
-      0 &= \frac{1}{2}\fG^20 = \frac{1}{2}\fG^2\pderiv{}{\estH_I}\Swuu
+        &= \frac{1}{2}\fG^20 = \frac{1}{2}\fG^2\pderiv{}{\estH_I}\Swuu
         && \text{set $\pderiv{}{\estH_I}\Swuu=0$ to find optimum $\estH_I$}
       \\&= \frac{1}{2}\fG^20 = \frac{1}{2}\fG^2\pderiv{}{\estH_I}\frac{\fF}{\fG}
         && \text{by \prefp{lem:estHk_Suu}}
