xcordef. 2019xcor/xcordef to common/xcordef

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -233,7 +233,7 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
 %    \\&&&&&=    \boxed{\ZH(z)\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{z}}
 %\end{align*}
 
-{\begin{align*}
+\begin{align*}
     \boxed{\Szxy(z)}
       &=\mcom{\Szyx^\ast\brp{\frac{1}{z^\ast}}}{by \prefpp{thm:ZSxy_sym}}
      &&\eqd \brlr{\Szyt^\ast\brp{\frac{1}{z^\ast}}}_{\rvt\eqd\rvx}
@@ -410,7 +410,7 @@ $\begin{array}{Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0
      &&= \ZH\brp{\frac{1}{z}} \Szyx(z)
     \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy^\ast\brp{\frac{1}{z^\ast}}}
      &&= \boxed{\ZH\brp{\frac{1}{z}} \ZH^\ast\brp{z^\ast} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
-  \end{align*}}
+  \end{align*}
 \end{proof}
 
 %---------------------------------------
